[package]
name = "elbo-sdk-rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "elbo_sdk_rust"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }

shared_memory = "0.12.4"
