[package]
name = "elbo-sdk-rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "elbo_sdk_rust"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
which = { version = "8.0" }
iceoryx2-bb-posix = "0.8.1"
iceoryx2-bb-system-types = "0.8.1"
rand = "0.8"
iceoryx2-bb-container = "0.8.1"
iceoryx2-loggers = {version = "0.8.1", features = ["std", "console"]}
iceoryx2 = "0.8.1"

